# pp.server

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  MANIFEST.in  Makefile  PLAN.md  README.rst  build_test.sh  buildout.cfg  circus-app.ini  circus.cfg  circus.ini  deploy.txt  development.ini  pdfreactor.ini  phantomjs.cfg  princexml.ini  prod.cfg  production.ini  pyproject.toml  requirements.txt  server.ini  setup.cfg  setup.py  supervisor.cfg  tox.ini
.baseline/: coverage.txt  format.txt  mypy.txt  test-results.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
.hermes/plans/: 2025-06-30_220000-pp-server-modernization.md
clients/: client.ts
docker/: Dockerfile  Makefile  development.ini
docker/speedata/: Dockerfile  Makefile  README.rst
docker/speedata-princexml-weasyprint/: Dockerfile  Makefile
docker/weasyprint/: Dockerfile  Makefile
docs/: Makefile  openapi.json
docs/source/: CHANGES.rst  README.rst  conf.py
old/: MANIFEST.in  README.txt  circus-app.ini  complete.cfg  install.sh  pdfreactor.cfg  princexml.cfg  setup.cfg
old/docker/: Makefile
pp/: __init__.py
pp.webservice.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pp/server/: __init__.py  authorization.py  cli.py  config.toml  converters.py  header.txt  index.pt  logger.py  models.py  pdfreactor-docker.txt  pdfreactor8.py  registry.py  server.py  tasks.py  templates.py  unoconv.py  upload.pt  util.py  views.py
pp/server/_templates/: circusd.ini  server.ini
pp/server/static/: default.css  style.css
pp/server/templates/: index.html  index.pt
pp/server/test_data/html/: default.css  index.html
pp/server/test_data/speedata/: index.html
pp/server/tests/: index.html  test_api.py  test_cli.py  test_converters.py  test_registry.py  test_templates.py  test_utils.py
ppwebservice/: tasks.py  tests.py  views.py
ppwebservice/templates/: mytemplate.pt
scripts/: generate_openapi.py
src/pp.client/: .setup.py.swp  setup.py
src/pp.client-php/: README.txt  class.zip_client.php
src/pp.client/pp/client/: cmd.py  header.txt  logger.py  pdf.py  unoconv.py
src/pp.client/pp/client/test_data/: default.css  index.html
src/pp.server/: CHANGES.rst  README.rst  job_status.pt  requirements.txt  setup.py
src/pp.server/doc/: README.rst
src/pp.server/doc/source/: CHANGES.rst  README.rst  conf.py  index.rst
src/pp.server/docs/: make.bat
src/pp.server/docs/source/: CHANGES.rst  README.rst
src/pp.server/pp/server/: __init__.py  authorization.py  converters.py  index.pt  logger.py  setup.py  stats.pt  tasks.py  tests.py  util.py  views.py
src/pp.server/pp/server/scripts/: worker.py
src/pp.server/pp/server/static/: default.css  webservice.css
src/pp.server/pp/server/tests/: __init__.py  index.html  test.docx  test_api.py  test_utils.py
src/pp.server/scripts/: service_client.py
var/: README.txt
