[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pp.server"
version = "4.0.0"
description = "pp.server - Produce & Publish Server"
readme = "README.rst"
requires-python = ">=3.12"
authors = [{"name" = "Andreas Jung", "email" = "info@zopyx.com"}]
keywords = [
    "web", "fastapi", "pdf", "unoconv", "conversion", "princexml", "pdfreactor"
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP",
    
]
dependencies = [
    "aiofiles>=24.1.0",
    "click>=8.1.7",
    "easyprocess>=1.1",
    "fastapi>=0.115.6",
    "httptools>=0.6.4",
    "hypercorn>=0.17.3",
    "uvicorn>=0.20.0",
    "jinja2>=3.1.4",
    "loguru>=0.7.2",
    "plac>=1.4.3",
    "python-multipart>=0.0.19",
    "webtest>=3.0.2",
    "tomli>=2.0.0; python_version<'3.11'",
]

[project.optional-dependencies]
testing = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0"
]
dev = [
    "ruff>=0.1.0",
    "ty>=0.0.55",
    "bandit>=1.7.0",
    "twine>=4.0.0",
    "build>=1.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.24.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
pp-server-templates = "pp.server.templates:main"
pp-server = "pp.server.cli:main"

[project.urls]
Homepage = "http://pypi.python.org/pypi/pp.server"

[tool.setuptools.packages.find]
include = ["pp*"]

[tool.setuptools.package-data]
"*" = ["*.html", "*.css", "*.js", "*.rst", "*.xml", "*.toml"]

[tool.ruff]
target-version = "py312"
line-length = 88
lint.select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "RUF", # ruff-specific rules
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "PERF",# performance
    "PIE", # flake8-pie (useless expressions)
]
lint.ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
    "C408",
    "B904",
    "E712",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101", "B303", "B311", "B404", "B603", "B607"]

[tool.pytest.ini_options]
testpaths = ["pp/server/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
